Fix incorrect spacing on the right.

--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -5847,6 +5847,12 @@ h1.page-title {
 	color: #28303d;
 }
 
+.navigation .nav-links .nav-next a,
+.navigation .nav-links .nav-previous a {
+	display: flex;
+	flex-direction: column;
+}
+
 @media only screen and (min-width: 592px) {
 	.navigation .nav-links {
 		display: flex;
