--- a/assets/sass/06-components/pagination.scss
+++ b/assets/sass/06-components/pagination.scss
@@ -24,6 +24,13 @@
 	}
 
 	.nav-links {
+
+		.nav-next a,
+		.nav-previous a {
+			display: flex;
+			flex-direction: column;
+		}
+
 		@include media(tablet) {
 			display: flex;
 			justify-content: center;
