--- a/style-rtl.css
+++ b/style-rtl.css
@@ -4282,6 +4282,12 @@ h1.page-title {
 	color: var(--global--color-primary);
 }
 
+.navigation .nav-links .nav-next a,
+.navigation .nav-links .nav-previous a {
+	display: flex;
+	flex-direction: column;
+}
+
 @media only screen and (min-width: 592px) {
 	.navigation .nav-links {
 		display: flex;
