--- a/style.css
+++ b/style.css
@@ -4291,6 +4291,12 @@ h1.page-title {
 	color: var(--global--color-primary);
 }
 
+.navigation .nav-links .nav-next a,
+.navigation .nav-links .nav-previous a {
+	display: flex;
+	flex-direction: column;
+}
+
 @media only screen and (min-width: 592px) {
 	.navigation .nav-links {
 		display: flex;
